UpComing Journey added in user profile